--- a/deploy/charts/airlock-microgateway/values.yaml
+++ b/deploy/charts/airlock-microgateway/values.yaml
@@ -26,10 +26,10 @@ operator:
     # -- Image repository from which to pull the Airlock Microgateway Operator image.
     repository: "quay.io/airlock/microgateway-operator"
     # -- Image tag to pull.
-    tag: "4.4.9"
+    tag: "4.4.10"
     # -- SHA256 image digest to pull (in the format "sha256:c79ee3f85862fb386e9dd62b901b607161d27807f512d7fbdece05e9ee3d7c63").
     # Overrides tag when specified.
-    digest: "sha256:d9ac198a9022e4d08156360e1e7cf42bd8f56f8396fb973329b549213fc661b9"
+    digest: "sha256:4bee7ed2dab4d7a3c91b667ae2b9301b6b9e34d222839ce4741c6af432ed4ca3"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Annotations to add to all Pods.
@@ -99,6 +99,7 @@ operator:
   # Configures the generation of a Prometheus Operator ServiceMonitor.
   serviceMonitor:
     # -- Whether to create a ServiceMonitor resource for monitoring.
+    # Requires that the monitoring.coreos.com/v1 resources are installed on the cluster.
     create: false
     # -- Labels to add to the ServiceMonitor.
     labels: {}
@@ -116,10 +117,10 @@ engine:
     # -- Image repository from which to pull the Airlock Microgateway Engine image.
     repository: "quay.io/airlock/microgateway-engine"
     # -- Image tag to pull.
-    tag: "4.4.9"
+    tag: "4.4.10"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:45e9a14bf5f6a6a968522b2c21d08d6847abb2aab404dd346adb33a8cbfef7f4"
+    digest: "sha256:af8ca08f0c129f9d4866303974c1c2f715ed1ae5794f240a24b7dfa8c8f86dbf"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Engine container.
@@ -137,6 +138,7 @@ engine:
     # Configures the generation of a Prometheus Operator PodMonitor.
     podMonitor:
       # -- Whether to create a PodMonitor resource for monitoring.
+      # Requires that the monitoring.coreos.com/v1 resources are installed on the cluster.
       create: false
       # -- Labels to add to the PodMonitor.
       labels: {}
@@ -167,10 +169,10 @@ sessionAgent:
     # -- Image repository from which to pull the Airlock Microgateway Session Agent image.
     repository: "quay.io/airlock/microgateway-session-agent"
     # -- Image tag to pull.
-    tag: "4.4.9"
+    tag: "4.4.10"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:ac01a337adccebf5e0412ed9a310c11d66e1b01f17cd2f3dce1ba140e108272e"
+    digest: "sha256:901a6fc3d3cba31224dbba1c1344cb891a53c04c6c01b39e9d88ac3dd138fa75"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Session Agent container.
