CHG: Sync Artifacts - 4.5.6

--- a/deploy/charts/airlock-microgateway/crds/accesscontrolpolicies.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/accesscontrolpolicies.microgateway.airlock.com.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.17.1
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.5.5
+    app.kubernetes.io/version: 4.5.6
     gateway.networking.k8s.io/policy: direct
   name: accesscontrolpolicies.microgateway.airlock.com
 spec:
@@ -114,7 +114,7 @@ spec:
                                   description: OIDC specifies a condition on the result of an OpenID Connect flow.
                                   properties:
                                     claim:
-                                      description: Claim specifies a condition on a JWT claim.
+                                      description: Claim specifies a condition on an ID token claim.
                                       properties:
                                         name:
                                           description: Name of the claim.
@@ -190,7 +190,7 @@ spec:
                                   description: OIDC specifies a condition on the result of an OpenID Connect flow.
                                   properties:
                                     claim:
-                                      description: Claim specifies a condition on a JWT claim.
+                                      description: Claim specifies a condition on an ID token claim.
                                       properties:
                                         name:
                                           description: Name of the claim.
