--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_accesscontrolpolicies.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_accesscontrolpolicies.yaml
@@ -6,7 +6,7 @@ metadata:
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.5.5
+    app.kubernetes.io/version: 4.5.6
     gateway.networking.k8s.io/policy: direct
   name: accesscontrolpolicies.microgateway.airlock.com
 spec:
@@ -133,8 +133,8 @@ spec:
                                   of an OpenID Connect flow.
                                 properties:
                                   claim:
-                                    description: Claim specifies a condition on a
-                                      JWT claim.
+                                    description: Claim specifies a condition on an
+                                      ID token claim.
                                     properties:
                                       name:
                                         description: Name of the claim.
@@ -216,8 +216,8 @@ spec:
                                   of an OpenID Connect flow.
                                 properties:
                                   claim:
-                                    description: Claim specifies a condition on a
-                                      JWT claim.
+                                    description: Claim specifies a condition on an
+                                      ID token claim.
                                     properties:
                                       name:
                                         description: Name of the claim.
