--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_parsers.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_parsers.yaml
@@ -6,7 +6,7 @@ metadata:
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.0
+    app.kubernetes.io/version: 4.7.1
   name: parsers.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -83,8 +83,8 @@ spec:
                               type: object
                             requestConditions:
                               description: RequestConditions defines additional request
-                                properties which must be matched in order for this
-                                rule to apply.
+                                properties which must all be matched in order for
+                                this rule to apply.
                               properties:
                                 header:
                                   description: Header defines the matching headers
