--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_csrfprotections.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_csrfprotections.yaml
@@ -6,7 +6,7 @@ metadata:
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.0
+    app.kubernetes.io/version: 4.7.1
   name: csrfprotections.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -54,7 +54,7 @@ spec:
                   properties:
                     requestConditions:
                       description: RequestConditions defines an exception based on
-                        a property of a request without taking into consideration
+                        request properties (all must match), without taking into consideration
                         the reason why a request has been blocked.
                       properties:
                         header:
