--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_denyrules.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_denyrules.yaml
@@ -6,7 +6,7 @@ metadata:
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.0
+    app.kubernetes.io/version: 4.7.1
   name: denyrules.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -675,8 +675,9 @@ spec:
                               type: object
                             requestConditions:
                               description: RequestConditions defines an exception
-                                based on a property of a request without taking into
-                                consideration the reason why a request has been blocked.
+                                based on request properties (all must match), without
+                                taking into consideration the reason why a request
+                                has been blocked.
                               properties:
                                 header:
                                   description: Header defines the matching headers
@@ -1696,8 +1697,8 @@ spec:
                               type: object
                             requestConditions:
                               description: RequestConditions defines additional request
-                                properties which must be matched in order for this
-                                rule to apply.
+                                properties which must all be matched in order for
+                                this rule to apply.
                               properties:
                                 header:
                                   description: Header defines the matching headers
