--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_headerrewrites.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_headerrewrites.yaml
@@ -6,7 +6,7 @@ metadata:
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.0
+    app.kubernetes.io/version: 4.7.1
   name: headerrewrites.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -89,8 +89,8 @@ spec:
                               type: string
                             requestConditions:
                               description: RequestConditions defines additional request
-                                properties which must be matched in order for this
-                                operation to be applied.
+                                properties which must all be matched in order for
+                                this operation to be applied.
                               properties:
                                 header:
                                   description: Header defines the matching headers
@@ -488,8 +488,8 @@ spec:
                                   type: string
                                 requestConditions:
                                   description: RequestConditions defines additional
-                                    request properties which must be matched in order
-                                    for this operation to be applied.
+                                    request properties which must be all matched in
+                                    order for this operation to be applied.
                                   properties:
                                     header:
                                       description: Header defines the matching headers
@@ -877,8 +877,8 @@ spec:
                               type: string
                             requestConditions:
                               description: RequestConditions defines additional request
-                                properties which must be matched in order for this
-                                operation to be applied.
+                                properties which must all be matched in order for
+                                this operation to be applied.
                               properties:
                                 header:
                                   description: Header defines the matching headers
@@ -1225,8 +1225,8 @@ spec:
                               type: string
                             requestConditions:
                               description: RequestConditions defines additional request
-                                properties which must be matched in order for this
-                                operation to be applied.
+                                properties which must all be matched in order for
+                                this operation to be applied.
                               properties:
                                 header:
                                   description: Header defines the matching headers
@@ -1619,8 +1619,8 @@ spec:
                                   type: string
                                 requestConditions:
                                   description: RequestConditions defines additional
-                                    request properties which must be matched in order
-                                    for this operation to be applied.
+                                    request properties which must all be matched in
+                                    order for this operation to be applied.
                                   properties:
                                     header:
                                       description: Header defines the matching headers
@@ -2046,8 +2046,8 @@ spec:
                               type: string
                             requestConditions:
                               description: RequestConditions defines additional request
-                                properties which must be matched in order for this
-                                operation to be applied.
+                                properties which must all be matched in order for
+                                this operation to be applied.
                               properties:
                                 header:
                                   description: Header defines the matching headers
