--- a/deploy/charts/airlock-microgateway/crds/denyrules.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/denyrules.microgateway.airlock.com.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.18.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.0
+    app.kubernetes.io/version: 4.7.1
   name: denyrules.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -624,7 +624,7 @@ spec:
                                     type: object
                                 type: object
                               requestConditions:
-                                description: RequestConditions defines an exception based on a property of a request without taking into consideration the reason why a request has been blocked.
+                                description: RequestConditions defines an exception based on request properties (all must match), without taking into consideration the reason why a request has been blocked.
                                 properties:
                                   header:
                                     description: Header defines the matching headers of a request.
@@ -1566,7 +1566,7 @@ spec:
                                     type: object
                                 type: object
                               requestConditions:
-                                description: RequestConditions defines additional request properties which must be matched in order for this rule to apply.
+                                description: RequestConditions defines additional request properties which must all be matched in order for this rule to apply.
                                 properties:
                                   header:
                                     description: Header defines the matching headers of a request.
